--- a/husky_control/config/localization.yaml
+++ b/husky_control/config/localization.yaml
@@ -26,3 +26,4 @@ imu0_config: [false, false, false,
 imu0_differential: true
 imu0_queue_size: 10
 imu0_remove_gravitational_acceleration: true
+#publish_tf: false
