--- a/outdoor_nav/params/navsat_params_sim.yaml
+++ b/outdoor_nav/params/navsat_params_sim.yaml
@@ -1,7 +1,7 @@
 navsat_transform:
   frequency: 30
   delay: 3.0
-  magnetic_declination_radians: 0.00  #0.168285  # For lat/long 43.500718, -80.546638 on Jun 1 2017
+  magnetic_declination_radians: 1.92  #0.168285  # For lat/long 49.9, 8.9 gazebo
   yaw_offset: 1.570796327  # IMU reads 0 facing magnetic north, not east
   zero_altitude: true
   broadcast_utm_transform: true
